force-app/main/default/objects/Account/fields/Google_Place_Data__c.field-meta.xml
<CustomField>
    <fullName>Google_Place_Data__c</fullName>
    <label>Google Place Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>