force-app/main/default/objects/Account/fields/Last_Google_Place_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Google_Place_Update__c</fullName>
    <label>Last Google Place Update</label>
    <type>DateTime</type>
</CustomField>